# wasteWater

./: .gitignore  CLOUD_DEPLOYMENT_FIXES.md  MULTILINGUAL_FEATURE.md  MULTILINGUAL_SETUP_COMPLETE.md  QUICKSTART.txt  README.md  STREAMLIT_CLOUD_DEPLOY.md  __init__.py  app.py  excel_handler.py  packages.txt  pyproject.toml  requirements.txt  run_streamlit.bat  run_streamlit.sh  setup.py  use_wastewater_tool.py  wastewater_treatment_calc.py  xlwings_integration.py
.streamlit/: config.toml
data/: MLSS浓度表.xlsx
doc/: DEPENDENCIES.md  DEPENDENCIES_SUMMARY.txt  Excel集成指南.md  INSTALLATION.md  Python3强制使用说明.md  QUICK_START.md  README.md  Streamlit前端使用指南.md  Streamlit应用添加记录.md  Streamlit集成总结.md  Windows使用指南.md  使用指南.md  多语言运行建议实施说明.md  工程架构描述.md  快速开始_Streamlit.md
i18n/: __init__.py  de.json  en.json  es.json  hi.json  sv.json  translations.py  zh.json
output/: 参数对比分析.xlsx  敏感性分析.xlsx
